--- a/style.css
+++ b/style.css
@@ -34,6 +34,16 @@ body{
     position: relative;
     box-shadow: 3px 5px 10px 10px rgba(0, 0, 0, 0.34);
     padding-top: 0;
+    animation: showForm 1.2s;
+}
+@keyframes showForm {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 .after{
     display: flex;
@@ -180,7 +190,17 @@ h1{
     margin-left: 3%;
     padding-top: 20px;
     
-
+}
+.exitAnime{
+    animation: exit .5s;
+}
+@keyframes exit{
+    from {
+        opacity: .5
+    }
+    to {
+        opacity: 0
+    }
 }
 
 .favicon{
@@ -191,6 +211,7 @@ h1{
     background-size: contain;
     border-radius: 50px;
     text-align: left;
+    padding-left: 50px;
     position: relative;
     top: -4px
 }
@@ -199,12 +220,12 @@ h1{
     text-decoration: none;
     font-size: 25px;
     color: #fff;
+    word-break: normal;
     position: relative;
     top: -4px;
 }
 .a:hover{
     filter: brightness(125%);
-    
     text-decoration: underline;
 }
 .a:active{
@@ -215,10 +236,11 @@ h1{
     margin: 5px;
     padding: 0;
     font-size: x-large ;
-    padding-left: 15px;
     position: relative;
-    top: -9px
+    top: -9px;
+    
 }
+
 .ex:hover{
     transform: scale(1.03)
     
@@ -229,7 +251,7 @@ h1{
 
 @media screen and (max-width: 1000px){
 .intered{
-    width: 50%;
+    width: 55%;
 }
 .textContainar div{
     width: 30%;
@@ -260,6 +282,16 @@ h1{
     #btnC{
        width: 87px;
        height: 32px; 
+    }
+    .a{
+        font-size: 19px;
+        left: -4px
+    }
+    .favicon{
+        width: 18px;
+        height: 18px;
+        padding-left: 0px;
+        left: -2px;
     }
     
     }
